# TrabalhoCG01

./: CMakeLists.txt  Colisao.cpp  Colisao.h  Normal.cpp  Normal.h  OpenGL_CallBack.cpp  OpenGL_CallBack.h  Posicao.cpp  Posicao.h  Retangulo.cpp  Retangulo.h  SkyBox.cpp  SkyBox.h  TexturaPlano.cpp  TexturaPlano.h  cor.cpp  cor.h  etc.h  extras.h  glcWavefrontObject.cpp  main.cpp  objectsHandler.cpp  objectsHandler.h
